# real-time-emotion-detection

./: LICENSE  README.md  pyproject.toml
nbs/: facial_landmarks.ipynb  video_landmarks.ipynb  webcam_trial.ipynb
nbs/emotion_detection/: live_video_frame.ipynb
